--- a/src/components/main.css
+++ b/src/components/main.css
@@ -106,3 +106,44 @@ body #app{
   color: white;
   cursor: pointer;
 }
+h1{
+  font-size: 50px;
+  color: #2c3e50;
+  font-style: bold;
+  text-align: center;
+  margin-bottom: 24px;
+}
+.LocationBlockSeparateElement{
+  width: 30%;
+  height: 500px;
+  margin: 20px;
+  background-color: lightblue;
+  border-radius: 10%;
+  color: black;
+  text-align: center;
+  display: inline-block;
+  overflow: hidden;
+
+}
+
+h3{
+  font-size: 24px;
+  color: #2c3e50;
+  font-style: bold;
+  text-align: center;
+}
+
+p{
+  font-size: 18px;
+  color: #2c3e50;
+  font-style: bold;
+  text-align: center;
+}
+
+.LocationSmallImage{
+  width: 300px;
+  height: 300px;
+  display: inline-block;
+  margin-top: 20px;
+  border-radius: 30px;
+}
